<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="Login"
        android:textColor=" #70B3A1"
        android:textSize="45dp" />

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="@drawable/edite_text_border"
            android:hint="@string/email"
            android:inputType="text"
            android:padding="15dp" />

        <EditText
            android:id="@+id/password_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="@drawable/edite_text_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp" />

        <TextView
            android:id="@+id/createID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="createAccountHandler"
            android:text="CREATE ACCOUNT"
            android:textColor="#0645AD" />

        <TextView
            android:id="@+id/forgetID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="FORGET YOUR PASWORD ?"
            android:textColor="#0645AD" />

        <Button
            android:id="@+id/bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:backgroundTint="#1F5D71"
            android:onClick="loginHandler"
            android:text="@string/button_login" />
    </LinearLayout>

</LinearLayout>